# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json  docker-compose.yml  documents.json
.claude/skills/cerebras/: SKILL.md
backend/: pyproject.toml
backend/app/: auth.py  chat.py  config.py  db.py  documents.py  drafts.py  main.py
backend/app/routes/: api.py  auth.py  drafts.py
backend/tests/: test_api.py  test_auth.py  test_chat.py  test_documents.py  test_drafts.py
frontend/: .gitignore  next.config.js  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/app/_components/: AppShell.module.css  AppShell.tsx  AuthForm.module.css  AuthForm.tsx  DocumentPreview.module.css  DocumentPreview.tsx  IntakeChat.module.css  IntakeChat.tsx  NdaChat.tsx  NdaForm.module.css  NdaForm.tsx  NdaPreview.module.css  NdaPreview.tsx
frontend/app/api/render-pdf/: route.tsx
frontend/app/app/: page.module.css  page.tsx
frontend/app/documents/: page.module.css  page.tsx
frontend/app/signup/: page.tsx
frontend/lib/: auth.ts  documents.ts  drafts.ts  markdown.ts  pdf.test.ts  pdf.tsx  render-client.ts  render.test.ts  render.ts  types.ts  validate.ts
frontend/scripts/: copy-templates.mjs
scripts/: start-linux.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE  SLA.md
