[project]
name = "prelegal-backend"
version = "0.1.0"
description = "Prelegal backend: serves the API and the statically built frontend."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
